<resources>
    <string name="app_name">MyCayKirin</string>
    <string name="kirin_spicy_noodles_logo">Kirin Spicy Noodles Logo</string>
    <string name="kirin_spicy_noodles">MỲ CAY KIRIN</string>
    <string name="indulge_in_the_number_one_spicy_noodles_savor_kirin">Thưởng thức mỳ cay số 1, thưởng thức Kirin!</string>
    <string name="welcome_back">Chào Mừng Trở Lại!</string>
    <string name="kirin_spicy_noodle_shop_management_software">Phần mềm quản lý tiệm mỳ cay Kirin</string>
    <string name="typing_password">Nhập mật khẩu</string>
    <string name="login">Đăng Nhập</string>
    <string name="nguyenvankhanhduy_2051067158_s23_62th">Nguyễn Văn Khánh Duy | 2051067158 | S23_62TH</string>
    <string name="order">Đơn Hàng</string>
    <string name="management">Quản Lý</string>
    <string name="settings">Cài Đặt</string>
    <string name="create_order">Tạo đơn hàng</string>
    <string name="payment_status">Tình trạng thanh toán</string>
    <string name="invoice_code">Mã hóa đơn:</string>
    <string name="order_creation_time">Thời gian tạo đơn:</string>
    <string name="total_price">TỔNG:</string>
    <string name="search">Tìm kiếm</string>
    <string name="cancel">Thoát</string>
    <string name="dine_in">Ăn Tại Quán</string>
    <string name="choose_table">Chọn Bàn</string>
    <string name="see_bill">Xem Hóa Đơn</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="reset_data">Thiết Đặt Lại Dữ Liệu</string>
    <string name="logout">Đăng Xuất</string>
    <string name="require_password_when_opening_app">Yêu Cầu Mật Khẩu Khi Mở Ứng Dụng</string>
    <string name="enter_table_name">Nhập Tên Bàn</string>
    <string name="add">Thêm</string>
    <string name="delete">Xóa</string>
    <string name="food_name">Tên món</string>
    <string name="price">Giá tiền</string>
    <string name="enter_the_password_for_the_first_time_use">Nhập mật khẩu cho lần sử dụng đầu tiên</string>
    <string name="enter_password_again">Nhập lại mật khẩu</string>
    <string name="confirm">Xác Nhận</string>
    <string name="enter_old_password">Nhập mật khẩu cũ</string>
    <string name="enter_new_password">Nhập mật khẩu mới</string>
    <string name="quantity">Số lượng</string>
    <string name="note">Ghi chú</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="cancel_food">Hủy Món</string>
    <string name="data_recovery">Phục Hồi Dữ Liệu Sao Lưu</string>
    <string name="recovery_code">Mã khôi phục</string>
    <string name="recovery">Khôi Phục</string>
    <string name="backup_data">Sao Lưu Dữ Liệu</string>
    <string name="loading">Đang Tải...</string>
    <string name="delete_cache">Xóa Bộ Nhớ Đệm</string>
</resources>