<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp">

    <ImageView
        android:id="@+id/iv_settings_f_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/kirin_spicy_noodles_logo"
        android:src="@drawable/cat_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_settings_f_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/kirin_spicy_noodle_shop_management_software"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_settings_f_logo"
        tools:layout_editor_absoluteX="18dp" />

    <TextView
        android:id="@+id/tv_settings_f_student_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nguyenvankhanhduy_2051067158_s23_62th"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_f_app_name" />

    <Button
        android:id="@+id/btn_settings_f_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/border_black_corner"
        android:backgroundTint="@color/black"
        android:text="@string/change_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_f_student_info" />

    <Button
        android:id="@+id/btn_settings_f_reset_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_black_corner"
        android:backgroundTint="@color/black"
        android:text="@string/reset_data"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings_f_change_password" />

    <Button
        android:id="@+id/btn_settings_f_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_black_corner"
        android:text="@string/backup_data"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings_f_reset_data"
        tools:layout_editor_absoluteX="18dp" />

    <Button
        android:id="@+id/btn_settings_f_delete_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_black_corner"
        android:text="@string/delete_cache"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings_f_backup"
        tools:layout_editor_absoluteX="18dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swt_settings_f_require_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/require_password_when_opening_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings_f_delete_cache" />

    <TextView
        android:id="@+id/btn_settings_f_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/logout"
        app:drawableStartCompat="@drawable/ic_exit_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swt_settings_f_require_password" />

    <FrameLayout
        android:id="@+id/fl_settings_f_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="18dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <include layout="@layout/dialog_loading" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>