<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp">

    <TextView
        android:id="@+id/tv_food_order_detail_d_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Mỳ Cay Lẩu Thái"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_food_order_detail_d_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/price"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_food_order_detail_d_food_name"
        tools:layout_editor_absoluteX="18dp" />

    <EditText
        android:id="@+id/et_food_order_detail_d_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints=""
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_food_order_detail_d_price" />

    <EditText
        android:id="@+id/et_food_order_detail_d_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints=""
        android:hint="@string/note"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_food_order_detail_d_quantity" />

    <Button
        android:id="@+id/btn_food_order_detail_d_add"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@id/btn_food_order_detail_d_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_food_order_detail_d_note" />

    <Button
        android:id="@+id/btn_food_order_detail_d_remove"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_food"
        app:layout_constraintBottom_toBottomOf="@+id/btn_food_order_detail_d_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_food_order_detail_d_add"
        app:layout_constraintTop_toTopOf="@+id/btn_food_order_detail_d_add" />

</androidx.constraintlayout.widget.ConstraintLayout>