<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp"
    >

    <TextView
        android:id="@+id/tv_require_password_d_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_the_password_for_the_first_time_use"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_require_password_d_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/typing_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_require_password_d_title"
        android:autofillHints=""
        android:layout_marginTop="18dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_require_password_d_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/enter_password_again"
        app:layout_constraintTop_toBottomOf="@+id/et_require_password_d_password"
        android:autofillHints=""
        android:layout_marginTop="18dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_require_password_d_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@+id/et_require_password_d_password_again" />

</androidx.constraintlayout.widget.ConstraintLayout>