<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_add_order_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/cat_logo_50"
        app:menu="@menu/menu_add_order_toolbar"
        app:title="KIRIN NOODLES" />

    <CheckBox
        android:id="@+id/cb_add_order_dine_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/dine_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_add_order_f" />

    <TextView
        android:id="@+id/tv_add_order_f_choose_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/choose_table"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_add_order_dine_in" />

    <Spinner
        android:id="@+id/spr_add_order_f_choose_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_order_f_choose_table" />


    <Button
        android:id="@+id/btn_add_order_f_see_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/border_black_corner"
        android:backgroundTint="@color/black"
        android:text="@string/see_bill"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/btn_add_order_f_add_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spr_add_order_f_choose_table" />

    <Button
        android:id="@+id/btn_add_order_f_add_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_black_corner"
        android:text="@string/create_order"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_order_f_see_bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add_order_f_see_bill"
        app:layout_constraintTop_toTopOf="@+id/btn_add_order_f_see_bill" />

    <ListView
        android:id="@+id/lv_add_order_f_foods"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_order_f_see_bill"
        tools:listitem="@layout/listview_item_food" />


</androidx.constraintlayout.widget.ConstraintLayout>